RESOLVED FIXED50164
Downloads: When the web process crashes, call error callbacks for pending downloads
https://bugs.webkit.org/show_bug.cgi?id=50164
Summary Downloads: When the web process crashes, call error callbacks for pending dow...
Anders Carlsson
Reported 2010-11-29 10:35:05 PST
Downloads: When the web process crashes, call error callbacks for pending downloads
Attachments
Patch (8.16 KB, patch)
2010-11-29 10:38 PST, Anders Carlsson
sam: review+
Anders Carlsson
Comment 1 2010-11-29 10:36:59 PST
Anders Carlsson
Comment 2 2010-11-29 10:38:49 PST
Anders Carlsson
Comment 3 2010-11-29 10:49:22 PST
Note You need to log in before you can comment on or make changes to this bug.