Downloads: When the web process crashes, call error callbacks for pending downloads https://bugs.webkit.org/show_bug.cgi?id=50164 <rdar://problem/8691170>

Reviewed by Sam Weinig.

* UIProcess/API/C/WKContext.h:
Add processDidCrash callback.

* UIProcess/Downloads/DownloadProxy.cpp:
(WebKit::DownloadProxy::~DownloadProxy):
Assert that the web context is null.

(WebKit::DownloadProxy::processDidClose):
Call the processDidCrash callback.

(WebKit::DownloadProxy::didFinish):
(WebKit::DownloadProxy::didFail):
Call downloadFinished.

* UIProcess/WebContext.cpp:
(WebKit::WebContext::processDidClose):
Call processDidClose on all pending downloads.

(WebKit::WebContext::downloadFinished):
Remove the download proxy from the map.

* UIProcess/WebDownloadClient.cpp:
(WebKit::WebDownloadClient::processDidCrash):
Call the processDidCrash callback function.

Canonical link: https://commits.webkit.org/63271@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@72812 268f45cc-cd09-0410-ab3c-d52691b4dbfc