WebKit2/UIProcess/WebDownloadClient.cpp
@@ -98,4 +98,12 @@ void WebDownloadClient::didFail(WebContext* webContext, DownloadProxy* downloadP
     m_client.didFail(toAPI(webContext), toAPI(downloadProxy), toAPI(error), m_client.clientInfo);
 }
 
+void WebDownloadClient::processDidCrash(WebContext* webContext, DownloadProxy* downloadProxy)
+{
+    if (!m_client.processDidCrash)
+        return;
+
+    m_client.processDidCrash(toAPI(webContext), toAPI(downloadProxy), m_client.clientInfo);
+}
+
 } // namespace WebKit
